@@ -1,0 +1,38 @@
+/* This testcase is part of GDB, the GNU debugger.
+
+   Copyright 2009 Free Software Foundation, Inc.
+
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 3 of the License, or
+   (at your option) any later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program.  If not, see <http://www.gnu.org/licenses/>.  */
+
+extern "C" int c_func (void)
+{
+  return 0; /* Breakpoint in c_func.  */
+}
+
+extern "C" int c_funcs_1 (void)
+{
+  return 1; /* Breakpoint in c_funcs_1.  */
+}
+
+extern "C" int c_funcs_2 (void)
+{
+  return 2; /* Breakpoint in c_funcs_2.  */
+}
+
+int main()
+{
+  c_func ();
+  c_funcs_1 ();
+  c_funcs_2 ();
+}
