@@ -1,0 +1,47 @@
+# Copyright 2009
+# Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Test breakpoints on extern "C" functions implemented in C++.
+
+if { [skip_cplus_tests] } { continue }
+
+set testfile "extern-c"
+set srcfile ${testfile}.cc
+set binfile ${objdir}/${subdir}/${testfile}
+
+if { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {debug c++}] != "" } {
+     untested extern-c.exp
+     return -1
+}
+
+# Start with a fresh gdb
+
+gdb_exit
+gdb_start
+gdb_reinitialize_dir $srcdir/$subdir
+gdb_load ${binfile}
+
+runto_main
+
+if { [gdb_breakpoint "c_func"] == 1 } {
+    pass "setting breakpoint at c_func"
+}
+gdb_continue_to_breakpoint "c_func" ".*c_func.*"
+
+gdb_test "rbreak c_funcs" \
+    "Breakpoint.* at .*c_funcs_1.*Breakpoint.* at .*c_funcs_2.*"
+gdb_continue_to_breakpoint "c_funcs_1" ".*c_funcs_1.*"
+gdb_continue_to_breakpoint "c_funcs_2" ".*c_funcs_2.*"
