@@ -1,3 +1,7 @@
+2009-11-25  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* gdb.cp/extern-c.cc, gdb.cp/extern-c.exp: New test.
+
 2009-11-23  Michael Snyder  <msnyder@vmware.com>
 
 	* gdb.reverse/watch-reverse.exp: Extend test for hw watchpoints.
